--- a/LVLSample/build.gradle
+++ b/LVLSample/build.gradle
@@ -1,28 +1,31 @@
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
+    google()
     mavenCentral()
 }
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion '17.0.0'
+    namespace 'com.example.android.market.licensing'
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 3
+        applicationId "com.example.android.market.licensing"
+        minSdkVersion 14
         targetSdkVersion 17
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
-    compile project(':LicenseVerificationLibrary')
+    implementation 'com.android.support:support-v4:+'
+    implementation project(':LicenseVerificationLibrary')
 }
