--- a/LicenseVerificationLibrary/build.gradle
+++ b/LicenseVerificationLibrary/build.gradle
@@ -1,19 +1,24 @@
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:8.0.2'
     }
 }
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
+
+repositories {
+    google()
+}
 
 android {
+    namespace 'com.google.android.vending.licensing'
     compileSdkVersion 17
-    buildToolsVersion '17.0.0'
 
     defaultConfig {
-        minSdkVersion 3
+        minSdkVersion 14
         targetSdkVersion 15
     }
 }
